force-app/main/default/objects/Queue__c/Queue__c.object-meta.xml
<CustomObject>
    <label>Queue</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>