force-app/main/default/objects/Queue__c/fields/Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>Queue_Email__c</fullName>
    <description>Email for the queue group</description>
    <inlineHelpText>Put email for the queue group</inlineHelpText>
    <label>Queue Email</label>
    <type>Email</type>
</CustomField>