force-app/main/default/objects/Queue__c/fields/Send_email_to_members__c.field-meta.xml
<CustomField>
    <fullName>Send_email_to_members__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >If checked, send email to queue members after receiving a case</inlineHelpText>
    <label>Send email to members</label>
    <type>Checkbox</type>
</CustomField>