force-app/main/default/objects/Queue__c/validationRules/VLR_SEND_EMAIL_MEMBERS_WITHOUT_EMAIL.validationRule-meta.xml
<ValidationRule>
    <fullName>VLR_SEND_EMAIL_MEMBERS_WITHOUT_EMAIL</fullName>
    <active>true</active>
    <description
  >Validate if checkbox to send email is true and if email field is fill.</description>
    <errorConditionFormula
  >AND( Send_email_to_members__c , ISBLANK( Queue_Email__c ) )</errorConditionFormula>
    <errorDisplayField>Queue_Email__c</errorDisplayField>
    <errorMessage
  >Email field cannot be blank when send email is checked</errorMessage>
</ValidationRule>